--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
-    <h1>Ejercicio sobre los planetas</h1>
+    <h1>Sistema Solar</h1>
     <table>
 <thead>
 <tr>
